# AI-Engineer-Assessment

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
evaluation/: test_queries.json
evaluation/results/: how-should-sensitive-data-be-protected-in-cloud-systems.json  report.md  summarise-the-requirements-for-access-control.json  what-controls-apply-to-api-security.json  what-is-the-best-recipe-for-chocolate-chip-cookies.json  what-policies-relate-to-logging-and-monitoring.json
scripts/: provision.sh  teardown.sh
src/policy_qa/: __init__.py  cli.py  config.py  evaluation.py  evaluator.py  graph.py  logging_setup.py  orchestrator.py  report.py  schemas.py  tracing.py
src/policy_qa/agents/: __init__.py  agent_factory.py  answer_draft_generation.py  answer_generator.py  content_moderation.py  context_relevance_grader.py  factory.py  faithfulness_grader.py  hallucination_grader.py  meta_knowledge.py  moderation.py  planner.py  policy_retrieval.py  prompt_blocks.py  query_planner.py  relevance_grader.py  responder.py  retrieval.py  safe_fallback.py
src/policy_qa/ingestion/: __init__.py  catalog_download.py  catalog_transform.py  ingest.py  pipeline.py
src/policy_qa/prompts/: __init__.py  context_relevance_grader_v1.md  faithfulness_grader_v1.md  faithfulness_grader_v2.md  judge_v1.md  moderation_v1.md  planner_v1.md  responder_v1.md  responder_v2.md
tests/: fakes.py  test_catalog_transform.py  test_fallback.py  test_injection_defence.py  test_logging.py  test_routing.py  test_schemas.py  test_transform.py
(+30 files in other folders)
