[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-qa"
version = "1.0.0"
description = "Multi-agent security policy Q&A system on Azure AI"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-openai>=1.10.0,<2",
    "azure-search-documents>=12.0.0,<13",
    "azure-identity>=1.17",
    "openai>=1.60",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "typer>=0.12",
]

[project.scripts]
policy-qa = "policy_qa.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
